
Changelog
=========

2017.7.0 (unreleased)
---------------------

- Use latest ruby (2.4.2) and nokogiri (1.8.1) [siegy22]
- Show icons in BlockedLocalRolesList. [njohner]
- Fix bug when accepting a multiadmin unit team task. [phgross]
- Ensure new versions are created when doc-properties change. [deiferni]
- Make cassation_date field accessible only to manager. [njohner]
- Use empty mimetype icon for empty document content types. [Kevin Bieri]
- Pin ftw.keywordwidget to 1.4.2 to fix a term-lookup error. [elioschmutz]
- Add mimetype for MS OneNote. [phgross]
- Correct field description for responsible person/entity when forwarding documents [njohner]
- SPV-word: Fix renaming agenda items in meeting view. [tarnap]
- Don't remove doc-properties for excerpts, use correct document as master. [deiferni]
- Extend repository-import excel with new dossier-manager role. [elioschmutz]
- Add a tabbed view for Administrators and Managers to reporoot - repofolder - dossier for listing child dossiers with blocked local roles. [Rotonen]
- Add group title option to the OGDS Synchronisation. [phgross]
- Add missing default value for dossier protection fields. [elioschmutz]
- Show filterlist also on empty tabbedview listings. [phgross]
- Fix redirection when creating new sablon templates. [tarnap]
- Use localstorage for tracking expanded tree uids instead of cookie. [Kevin Bieri]
- Remove deactivate action for private dossiers. [tarnap]
- SPV: Sort meetings by date. [tarnap]
- SPV: Add concluded meetings to committee overview and reorder the blocks in the columns. [tarnap]
- Fix syncing the submitted proposal title to sql. [deiferni]
- SPV: Fix member links in committee overview. [tarnap]
- Add date of submission to proposals. [deiferni]
- SPV: Make the considerations field a trix field. [tarnap]
- Handle inconsistent local roles on protected dossiers with a warning message. [elioschmutz]