@@ -89,6 +89,7 @@ class TestBumblebeeOverlayListing(IntegrationTestCase):
                 'Checkout and edit',
                 'Checkin without comment',
                 'Checkin with comment',
+                'Cancel checkout',
                 'Download copy',
                 'Open as PDF',
                 'Open detail view',
@@ -233,6 +234,7 @@ class TestBumblebeeOverlayDocument(IntegrationTestCase):
                 'Checkout and edit',
                 'Checkin without comment',
                 'Checkin with comment',
+                'Cancel checkout',
                 'Download copy',
                 'Open as PDF',
                 ],
